--- a/templades/myProfile/myProfile.html
+++ b/templades/myProfile/myProfile.html
@@ -192,9 +192,9 @@ Mi Portafolio
                 frameworks como Django. Mi dominio en HTML, CSS y JavaScript me permite crear interfaces de usuario
                 atractivas y funcionales.</p>
             <div class="buttons">
-                <a href="{% static 'files/CVGabinoHernandezLuisRene.pdf' %}" class="btn" target="_blank">Ver CV</a>
+                <a href="{% static 'files/CvLuisReneGH.pdf' %}" class="btn" download="CvLuisReneGH.pdf.pdf">Ver CV</a>
                 <a href="#contact" class="btn">CONTACTO</a>
-            </div>
+            </div>v
         </div>
         <div class="image">
             <img src="{% static 'imgs/profile.jpg' %}" alt="Imagen de perfil">
