--- a/templades/myProfile/myProfile.html
+++ b/templades/myProfile/myProfile.html
@@ -192,7 +192,7 @@ Mi Portafolio
                 frameworks como Django. Mi dominio en HTML, CSS y JavaScript me permite crear interfaces de usuario
                 atractivas y funcionales.</p>
             <div class="buttons">
-                <!-- <a href="{% static 'files/CVGabiñoHernandezLuisRene.pdf' %}" class="btn" target="_blank">Ver CV</a>-->
+                <a href="{% static 'files/CVGabiñoHernandezLuisRene.pdf' %}" class="btn" target="_blank">Ver CV</a>
                 <a href="#contact" class="btn">CONTACTO</a>
             </div>
         </div>
